--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -62,6 +62,7 @@
                         android:layout_marginEnd="@dimen/_8sdp"
                         android:text="@string/title"
                         android:textColor="@color/black"
+                        android:textStyle="bold"
                         android:textSize="@dimen/item_title_text_size"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/book_price"
@@ -90,7 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/edit_text_margin_top"
                     android:text="@string/author"
-                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="@dimen/item_sub_title_text_size" />
 
                 <TextView
@@ -98,30 +99,42 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/available_quantity"
-                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="@dimen/item_sub_title_text_size" />
-
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:text="Description:"
+                    android:textSize="@dimen/item_sub_title_text_size"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/book_qty" />
 
                 <TextView
                     android:id="@+id/book_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/edit_text_margin_top"
+                    android:layout_marginTop="@dimen/_5sdp"
                     android:text="@string/description"
-                    android:textColor="@color/black"
                     android:textSize="@dimen/item_sub_title_text_size"
                     app:layout_constraintTop_toBottomOf="@+id/book_qty" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_50sdp"/>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <Button
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/buy_request"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_margin="@dimen/_5sdp"
         android:text="@string/buy_request"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:backgroundTint="@color/primary"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
