--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,9 +27,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 app:layout_constraintTop_toBottomOf="@+id/old_book_store_items" />
+
             <View
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"/>
+                android:layout_height="@dimen/_50sdp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
@@ -41,11 +42,11 @@
         android:layout_marginEnd="@dimen/edit_text_margin_top"
         android:layout_marginBottom="@dimen/_50sdp"
         android:src="@drawable/ic_outline_search_24"
-        app:tint="@color/white"
-        app:maxImageSize="@dimen/_30sdp"
-        app:backgroundTint="@color/grey"
+        app:backgroundTint="@color/primary"
+        app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
