--- a/app/src/main/res/layout/item_sell_order.xml
+++ b/app/src/main/res/layout/item_sell_order.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/_3sdp"
-    app:cardElevation="@dimen/_10sdp"
     app:cardCornerRadius="@dimen/_5sdp"
-    android:layout_height="wrap_content">
+    app:cardElevation="@dimen/_10sdp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_back_for_search"
         android:padding="@dimen/_10sdp">
 
         <ImageView
@@ -51,7 +52,7 @@
                 android:maxLines="1"
                 android:text="@string/price"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
+                android:textSize="@dimen/_14ssp"
                 android:textStyle="bold" />
 
             <TextView
@@ -86,35 +87,39 @@
             android:id="@+id/seller_info_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="@dimen/_10sdp"
+            android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/grey"/>
+                android:background="@color/grey" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/_3sdp"
                 android:text="Buyer information"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:padding="@dimen/_3sdp"
-                android:gravity="center"
-                android:textSize="@dimen/_14ssp" />
+                android:textSize="@dimen/_14ssp"
+                android:textStyle="bold" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/grey"/>
+                android:background="@color/grey" />
+
             <TextView
                 android:id="@+id/buyer_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@string/seller_name"
-                android:textSize="@dimen/_14ssp"
-                android:layout_marginTop="@dimen/_5sdp"/>
+                android:textSize="@dimen/_14ssp" />
 
             <TextView
                 android:id="@+id/buyer_address"
@@ -130,30 +135,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:text="Accept Order"/>
+                android:text="Accept Order" />
 
             <LinearLayout
                 android:id="@+id/phone_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:visibility="gone"
-                android:gravity="center">
+                android:visibility="visible">
+
                 <TextView
                     android:id="@+id/buyer_phone"
                     android:layout_width="0dp"
-                    android:layout_weight="4"
                     android:layout_height="wrap_content"
+                    android:layout_weight="4"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:text="@string/phone"
                     android:textSize="@dimen/_14ssp" />
-                <Button
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/call_btn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Call"/>
+                    android:src="@drawable/ic_call"
+                    app:backgroundTint="@color/primary"
+                    app:fabSize="mini"
+                    app:tint="@color/white" />
             </LinearLayout>
 
         </LinearLayout>
