--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -137,4 +137,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
+
+    <ImageView
+        android:id="@+id/more_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/_6sdp"
+        android:src="@drawable/ic_baseline_more_vert_24"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar_lay"
+        app:layout_constraintEnd_toEndOf="@+id/toolbar_lay"
+        app:layout_constraintTop_toTopOf="@+id/toolbar_lay" />
 </androidx.constraintlayout.widget.ConstraintLayout>
