--- a/app/src/main/res/layout/store_item_card.xml
+++ b/app/src/main/res/layout/store_item_card.xml
@@ -2,20 +2,20 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/_2sdp"
     app:cardCornerRadius="@dimen/_5sdp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/item_selector"
         android:padding="@dimen/main_layout_padding">
 
         <ImageView
             android:id="@+id/item_image"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/_120sdp"
             android:layout_height="@dimen/_120sdp"
             android:src="@drawable/placeholder"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,6 @@
             app:layout_constraintStart_toStartOf="@+id/author_name"
             app:layout_constraintTop_toBottomOf="@+id/author_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
 
 
     <!--<LinearLayout
@@ -155,3 +154,6 @@
             android:textSize="@dimen/price_text_size"
             android:textStyle="bold" />
     </LinearLayout>-->
+
+
+</androidx.cardview.widget.CardView>
